--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
   hooks_riverpod: ^2.0.0-dev.9
+  go_router: ^4.4.1
 
 dev_dependencies:
   flutter_test:
