--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   freezed: ^2.1.0+1
   freezed_annotation: ^2.1.0
   json_annotation: ^4.6.0
-  hooks_riverpod: ^2.0.0-dev.9
+  hooks_riverpod: 1.0.4
   go_router: ^4.4.1
 
 dev_dependencies:
