--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   json_annotation: ^4.6.0
   hooks_riverpod: 1.0.4
   go_router: ^4.4.1
+  table_calendar: ^3.0.7
+  universal_html: ^2.0.8
+  draggable_widget: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
