--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   table_calendar: ^3.0.7
   universal_html: ^2.0.8
   draggable_widget: ^2.0.0
-
+  isar: 3.0.0-dev.14
+  isar_flutter_libs: 3.0.0-dev.14
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
+  isar_generator: 3.0.0-dev.14
   json_serializable: ^6.3.1
 
 
